HelloUltraviolet/Fixtures/RejectedSource/Keys/SpeculativeDefer/Expected.uv
//! Expected diagnostic metadata for the SpeculativeDefer rejected-source specimen.

expectedDiagnostic("E-CON-0093", "rule.19.K-Spec-No-Defer")
